external-crates/move/move-compiler/tests/move_2024/parser/positional_struct_fields_with_idents.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_with_idents.move:4:24
  │
4 │     public struct Foo(x: u64) has copy, drop;
  │                      - ^ Expected ')'
  │                      │  
  │                      To match this '('

