external-crates/move/move-compiler/tests/move_2024/parser/positional_struct_fields_with_idents.move
address 0x42 {
module M {
    // Valid positional field struct declaration
    public struct Foo(x: u64) has copy, drop;
}
}

